About me section updated

--- a/unv.css
+++ b/unv.css
@@ -1,15 +1,19 @@
 @charset "UTF-8";
 /* CSS Document */
 
-* {
-	 box-sizing: border-box;
-}
  body {
 	 background: #FFFFFF;
 	 color: #222;
 	 line-height: normal;
 	 font-size: 22px;
 	 font-family: sans-serif;
+	 height: 100%;
+	 margin-top: 150px;
+	 margin-left: 0;
+	 margin-right: 0;
+	 min-width:1000px;
+    width: auto !important;
+    width:1000px;
 }
  a, a:hover {
 	 color: #000000;
@@ -23,7 +27,7 @@ font-style: normal;
 	 left: 0;
 	 right: 0;
 	 top: 0;
-	 height: 60px;
+	 height: 140px;
 	 background: #FFFFFF;
 	 z-index: 10;
 	 min-width: 800px;
@@ -57,7 +61,7 @@ font-style: normal;
 	 font-size: 25px;
 	 font-weight: 900;
 	 text-transform: uppercase;
-	 top: 25px;
+	 top: 26px;
 	 border-radius: 50px;
 }
  nav .links li {
@@ -115,7 +119,7 @@ font-style: normal;
 	display: block;
 	z-index: 20;
 	top: 5px;
-	left: 5;
+	left: 10px;
 }
 
 #welcomebox{
@@ -128,10 +132,11 @@ font-style: normal;
 	background-color: #FFFFFF;
 	width: 100%;
 	height: 130px;
-	position: fixed;
+	position: relative;
   left: 0;
   bottom: 0;
 	font-size: 15px;
+	margin-top: 50px;
 }
 
 #social{
@@ -146,14 +151,5 @@ font-style: normal;
 	border-radius: 50px;
 	 filter: invert(100%);
   -webkit-filter: invert(100%);
-}
-
-
-h1{
-	color: black;
-}
-
-p{
-	color: black;
 }
 
