--- a/unv.css
+++ b/unv.css
@@ -1,155 +1,146 @@
 @charset "UTF-8";
 /* CSS Document */
-
- body {
-	 background: #FFFFFF;
-	 color: #222;
-	 line-height: normal;
-	 font-size: 22px;
-	 font-family: sans-serif;
-	 height: 100%;
-	 margin-top: 150px;
-	 margin-left: 0;
-	 margin-right: 0;
-	 min-width:1000px;
-    width: auto !important;
-    width:1000px;
+body {
+  background: #FFFFFF;
+  color: #222;
+  line-height: normal;
+  font-size: 22px;
+  font-family: sans-serif;
+  height: 100%;
+  margin-top: 150px;
+  margin-left: 0;
+  margin-right: 0;
+  min-width: 1000px;
+  width: auto !important;
+  width: 1000px;
 }
- a, a:hover {
-	 color: #000000;
-	 text-decoration: none;
-	 font-family: nobel,sans-serif;
-font-weight: 400;
-font-style: normal;
+a, a:hover {
+  color: #000000;
+  text-decoration: none;
+  font-family: nobel, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
- nav {
-	 position: fixed;
-	 left: 0;
-	 right: 0;
-	 top: 0;
-	 height: 140px;
-	 background: #FFFFFF;
-	 z-index: 10;
-	 min-width: 800px;
+nav {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 140px;
+  background: #FFFFFF;
+  z-index: 10;
+  min-width: 800px;
 }
- nav .logo {
-	 position: relative;
-	 float: left;
-	 height: 50px;
-	 line-height: 50px;
-	 padding: 0 15px;
-	 font-size: 25px;
-	 font-weight: 900;
-	 text-transform: uppercase;
-	 top: 47px;
-	 border-radius: 50px;
-	 left: 145px;
+nav .logo {
+  position: relative;
+  float: left;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 15px;
+  font-size: 25px;
+  font-weight: 900;
+  text-transform: uppercase;
+  top: 47px;
+  border-radius: 50px;
+  left: 145px;
 }
- nav .logo span {
-	 display: inline-block;
-	 position: relative;
-	 top: -8px;
-	 font-size: 13pt;
+nav .logo span {
+  display: inline-block;
+  position: relative;
+  top: -8px;
+  font-size: 13pt;
 }
- nav .links {
-	 float: right;
-	 margin-right: 10px;
-	 position: relative;
-	 height: 50px;
-	 line-height: 50px;
-	 padding: 0 15px;
-	 font-size: 25px;
-	 font-weight: 900;
-	 text-transform: uppercase;
-	 top: 26px;
-	 border-radius: 50px;
+nav .links {
+  float: right;
+  margin-right: 10px;
+  position: relative;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 15px;
+  font-size: 25px;
+  font-weight: 900;
+  text-transform: uppercase;
+  top: 26px;
+  border-radius: 50px;
 }
- nav .links li {
-	 float: left;
-	 list-style: none;
-	 position: relative;
-	 display: inline-block;
+nav .links li {
+  float: left;
+  list-style: none;
+  position: relative;
+  display: inline-block;
 }
- nav .links li > a {
-	 position: relative;
-	 display: inline-block;
-	 padding: 0 10px;
-	 line-height: 30px;
-	 height: 30px;
+nav .links li > a {
+  position: relative;
+  display: inline-block;
+  padding: 0 10px;
+  line-height: 30px;
+  height: 30px;
 }
- nav .links li > a:hover {
-	 color: #fff;
-	 background: linear-gradient(18deg, rgba(166,43,80,1) 0%, rgba(39,26,87,1) 100%);
-	 border-radius: 5px;
+nav .links li > a:hover {
+  color: #fff;
+  background: linear-gradient(18deg, rgba(166, 43, 80, 1) 0%, rgba(39, 26, 87, 1) 100%);
+  border-radius: 5px;
 }
-
- nav .logo:hover {
-	 color: #fff;
-	 background: linear-gradient(18deg, rgba(166,43,80,1) 0%, rgba(39,26,87,1) 100%);
-	 border-radius: 5px;
+nav .logo:hover {
+  color: #fff;
+  background: linear-gradient(18deg, rgba(166, 43, 80, 1) 0%, rgba(39, 26, 87, 1) 100%);
+  border-radius: 5px;
 }
-
- nav .links li ul {
-	 position: absolute;
-	 background: #fff;
-	 box-shadow: 0 0 5px rgba(0, 0, 0, .15);
-	 display: none;
-	 list-style: none;
-    padding-left: 0;
+nav .links li ul {
+  position: absolute;
+  background: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, .15);
+  display: none;
+  list-style: none;
+  padding-left: 0;
 }
- nav .links li ul > li {
-	 clear: both;
-	 display: block;
-	 margin: 0;
-	 width: 100%;
+nav .links li ul > li {
+  clear: both;
+  display: block;
+  margin: 0;
+  width: 100%;
 }
- nav .links li ul > li:hover {
-	 background: #453B5E;
+nav .links li ul > li:hover {
+  background: #453B5E;
 }
- nav .links li ul > li:hover > a {
-	 background: #453B5E;
-	 color: #fff;
+nav .links li ul > li:hover > a {
+  background: #453B5E;
+  color: #fff;
 }
- nav .links li:hover > .drop {
-	 display: block;
+nav .links li:hover > .drop {
+  display: block;
 }
-
-#logopic{
-	position: fixed;
-	display: block;
-	z-index: 20;
-	top: 5px;
-	left: 10px;
+#logopic {
+  position: fixed;
+  display: block;
+  z-index: 20;
+  top: 5px;
+  left: 10px;
 }
-
-#welcomebox{
-	margin-left: auto;
-	margin-right: auto;
-	width: 700px;
+#welcomebox {
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
 }
-
-#footer{
-	background-color: #FFFFFF;
-	width: 100%;
-	height: 130px;
-	position: relative;
+#footer {
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 130px;
+  position: relative;
   left: 0;
   bottom: 0;
-	font-size: 15px;
-	margin-top: 50px;
+  font-size: 15px;
+  margin-top: 50px;
 }
-
-#social{
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 10px;
-	padding-bottom: 0px;
+#social {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10px;
+  padding-bottom: 0px;
 }
-
-.socialfooter:hover{
-	background: linear-gradient(18deg, rgba(139,212,175,1) 0%, rgba(216,229,168,1) 100%);
-	border-radius: 50px;
-	 filter: invert(100%);
+.socialfooter:hover {
+  background: linear-gradient(18deg, rgba(139, 212, 175, 1) 0%, rgba(216, 229, 168, 1) 100%);
+  border-radius: 50px;
+  filter: invert(100%);
   -webkit-filter: invert(100%);
 }
-
