Updated MacRecovery and additonal pages

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,120 +1,124 @@
 @charset "UTF-8";
 /* CSS Document */
-
-h1{
-	font-family: atten-new,sans-serif;
-font-weight: 300;
-font-style: normal;
-
+h1 {
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
-
-p{
-	font-family: atten-new,sans-serif;
-font-weight: 300;
-font-style: normal;
+p {
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
-
-#para{
-	width: 640px;
-	min-width: 640px;
+#para {
+  width: 600px;
+  min-width: 600px;
 }
-
-#list{
-	width: 50%;
-	margin-left: auto;
-	margin-right: auto;
-	
+#list {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-.projects{
-	list-style-type: circle;
-	font-family: atten-new,sans-serif;
-font-weight: 300;
-font-style: normal;
+#resume {
+  margin-left: auto;
+  margin-right: auto;
 }
-
-#profilepic{
-	border-radius: 300px;
-	height: 400px;
-	padding: 50px;
-	margin-top: auto;
-	margin-bottom: auto;
-	
+.projects {
+  list-style-type: circle;
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
-
-#topprof{
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-	width: 1100px;
+#profilepic {
+  border-radius: 300px;
+  height: 400px;
+  padding: 50px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
-
-#container{
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	background: linear-gradient(18deg, rgba(166,43,80,1) 0%, rgba(39,26,87,1) 100%);
-	color: white;
-	
+#topprof {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1100px;
 }
-
-#container2{
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	background: #333333
+#container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background: linear-gradient(18deg, rgba(166, 43, 80, 1) 0%, rgba(39, 26, 87, 1) 100%);
+  color: white;
 }
-
-#barz{
-	margin-left: auto;
-	margin-right: auto;
-	position: relative;
-	height: 500px;
-	padding: 20px;
-	width: 60%;
-	min-width: 700px;
+.button {
+  display: block;
+  border: 2px solid #fff;
+	border-radius: 3px;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  margin-left: auto;
+  margin-right: auto;
+	width: 175px;
 }
-
-.year{
-	white-space: nowrap;
-	color: white;
-	font-family: atten-new,sans-serif;
-font-weight: 300;
-font-style: normal;
+.button:hover {
+  background: #fff;
+  color: #000;
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
-
-.bar{
-	left: 100px;
+#container2 {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background: #333333
 }
-
-.bar-one{
-	display: flex;
+#barz {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  height: 500px;
+  padding: 20px;
+  width: 60%;
+  min-width: 700px;
 }
-
+.year {
+  white-space: nowrap;
+  color: white;
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+.bar {
+  left: 100px;
+}
+.bar-one {
+  display: flex;
+}
 .bar-graph .year {
   -webkit-animation: fade-in-text 2.2s 0.1s forwards;
   -moz-animation: fade-in-text 2.2s 0.1s forwards;
   animation: fade-in-text 2.2s 0.1s forwards;
   opacity: 0;
-	flex-direction: row;
+  flex-direction: row;
 }
-
 .bar-graph-horizontal {
   max-width: 93%;
 }
-
 .bar-graph-horizontal > div {
   float: left;
   margin-bottom: 8px;
   width: 90%;
 }
-
 .bar-graph-horizontal .year {
   float: left;
   margin-top: 18px;
   width: 50px;
 }
-
 .bar-graph-horizontal .bar {
   border-radius: 3px;
   height: 55px;
@@ -123,7 +127,6 @@ font-style: normal;
   position: relative;
   width: 0;
 }
-
 .bar-graph-one .bar::after {
   -webkit-animation: fade-in-text 2.2s 0.1s forwards;
   -moz-animation: fade-in-text 2.2s 0.1s forwards;
@@ -135,64 +138,54 @@ font-style: normal;
   right: 16px;
   top: 17px;
 }
-
 .bar-graph-one .bar-zero .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-zero 1.2s 0.1s forwards;
   -moz-animation: show-bar-zero 1.2s 0.1s forwards;
   animation: show-bar-zero 1.2s 0.1s forwards;
 }
-
 .bar-graph-one .bar-one .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-one 1.2s 0.2s forwards;
   -moz-animation: show-bar-one 1.2s 0.2s forwards;
   animation: show-bar-one 1.2s 0.2s forwards;
 }
-
 .bar-graph-one .bar-two .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-two 1.2s 0.3s forwards;
   -moz-animation: show-bar-two 1.2s 0.3s forwards;
   animation: show-bar-two 1.2s 0.3s forwards;
 }
-
 .bar-graph-one .bar-three .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-three 1.2s 0.4s forwards;
   -moz-animation: show-bar-three 1.2s 0.4s forwards;
   animation: show-bar-three 1.2s 0.4s forwards;
 }
-
 .bar-graph-one .bar-four .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-four 1.2s 0.5s forwards;
   -moz-animation: show-bar-four 1.2s 0.5s forwards;
   animation: show-bar-four 1.2s 0.5s forwards;
 }
-
 .bar-graph-one .bar-five .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-five 1.2s 0.6s forwards;
   -moz-animation: show-bar-five 1.2s 0.6s forwards;
   animation: show-bar-five 1.2s 0.6s forwards;
 }
-
 .bar-graph-one .bar-six .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-six 1.2s 0.7s forwards;
   -moz-animation: show-bar-six 1.2s 0.7s forwards;
   animation: show-bar-six 1.2s 0.7s forwards;
 }
-
 .bar-graph-one .bar-seven .bar {
   background-color: #A52A51;
   -webkit-animation: show-bar-seven 1.2s 0.8s forwards;
   -moz-animation: show-bar-seven 1.2s 0.8s forwards;
   animation: show-bar-seven 1.2s 0.8s forwards;
 }
-
-
 /* Bar Graph Horizontal Animations */
 @-webkit-keyframes show-bar-zero {
   0% {
@@ -210,7 +203,6 @@ font-style: normal;
     width: 30%;
   }
 }
-
 @-webkit-keyframes show-bar-two {
   0% {
     width: 0;
@@ -219,7 +211,6 @@ font-style: normal;
     width: 80%;
   }
 }
-
 @-webkit-keyframes show-bar-three {
   0% {
     width: 0;
@@ -228,7 +219,6 @@ font-style: normal;
     width: 20%;
   }
 }
-
 @-webkit-keyframes show-bar-four {
   0% {
     width: 0;
@@ -237,7 +227,6 @@ font-style: normal;
     width: 20%;
   }
 }
-
 @-webkit-keyframes show-bar-five {
   0% {
     width: 0;
@@ -246,7 +235,6 @@ font-style: normal;
     width: 60%;
   }
 }
-
 @-webkit-keyframes show-bar-six {
   0% {
     width: 0;
@@ -255,7 +243,6 @@ font-style: normal;
     width: 90%;
   }
 }
-
 @-webkit-keyframes show-bar-seven {
   0% {
     width: 0;
@@ -264,8 +251,6 @@ font-style: normal;
     width: 70%;
   }
 }
-
-
 @-webkit-keyframes fade-in-text {
   0% {
     opacity: 0;
