--- a/CSS/unv.css
+++ b/CSS/unv.css
@@ -144,3 +144,18 @@ nav .links li:hover > .drop {
   filter: invert(100%);
   -webkit-filter: invert(100%);
 }
+
+.socialfooter{
+	height: 60px;
+		width: 60px;
+}
+
+p{
+	text-indent: 50px;
+}
+
+h1,h2,h3,h4{
+	  font-family: atten-new, sans-serif;
+  font-weight: Bold;
+  font-style: normal;
+}
