--- a/CSS/All-In-One-Mac-Recovery.css
+++ b/CSS/All-In-One-Mac-Recovery.css
@@ -36,7 +36,9 @@ p {
 .disclaimer{
 	background-color: #FFFF87;
 	border: 2px solid black;
-	box-shadow: 5px 5px gray;
+	-webkit-box-shadow: 0px 8px 10px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 8px 10px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 8px 10px 0px rgba(0,0,0,0.75);
 	font-family: atten-new, sans-serif;
   font-weight: 300;
   font-style: normal;
