--- a/CSS/about.css
+++ b/CSS/about.css
@@ -11,8 +11,7 @@ p {
   font-style: normal;
 }
 #para {
-  width: 600px;
-  min-width: 600px;
+  width: 50%;
 }
 #list {
   width: 50%;
@@ -40,7 +39,24 @@ p {
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  width: 1100px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+@media only screen and (max-width: 1000px) {
+  #topprof {
+    display: block;
+  }
+  #para {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+  #profilepic {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
 }
 #container {
   width: 100%;
@@ -52,7 +68,7 @@ p {
 .button {
   display: block;
   border: 2px solid #fff;
-	border-radius: 3px;
+  border-radius: 3px;
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
@@ -62,7 +78,7 @@ p {
   font-style: normal;
   margin-left: auto;
   margin-right: auto;
-	width: 175px;
+  width: 175px;
 }
 .button:hover {
   background: #fff;
@@ -80,11 +96,9 @@ p {
 #barz {
   margin-left: auto;
   margin-right: auto;
-  position: relative;
   height: 500px;
   padding: 20px;
-  width: 60%;
-  min-width: 700px;
+  max-width: 800px;
 }
 .year {
   white-space: nowrap;
@@ -95,6 +109,7 @@ p {
 }
 .bar {
   left: 100px;
+  min-width: 100px;
 }
 .bar-one {
   display: flex;
@@ -107,12 +122,12 @@ p {
   flex-direction: row;
 }
 .bar-graph-horizontal {
-  max-width: 93%;
+  max-width: 100%;
 }
 .bar-graph-horizontal > div {
   float: left;
   margin-bottom: 8px;
-  width: 90%;
+  width: 100%;
 }
 .bar-graph-horizontal .year {
   float: left;
@@ -133,10 +148,12 @@ p {
   animation: fade-in-text 2.2s 0.1s forwards;
   color: #fff;
   content: attr(data-percentage);
-  font-weight: 700;
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
   position: absolute;
   right: 16px;
-  top: 17px;
+  top: 12px;
 }
 .bar-graph-one .bar-zero .bar {
   background-color: #A52A51;
@@ -192,7 +209,7 @@ p {
     width: 0;
   }
   100% {
-    width: 50%;
+    width: calc(50% - 100px);
   }
 }
 @-webkit-keyframes show-bar-one {
@@ -200,7 +217,7 @@ p {
     width: 0;
   }
   100% {
-    width: 30%;
+    width: calc(30% - 100px);
   }
 }
 @-webkit-keyframes show-bar-two {
@@ -208,7 +225,7 @@ p {
     width: 0;
   }
   100% {
-    width: 80%;
+    width: calc(80% - 100px);
   }
 }
 @-webkit-keyframes show-bar-three {
@@ -216,7 +233,7 @@ p {
     width: 0;
   }
   100% {
-    width: 20%;
+    width: calc(30% - 100px);
   }
 }
 @-webkit-keyframes show-bar-four {
@@ -224,7 +241,7 @@ p {
     width: 0;
   }
   100% {
-    width: 20%;
+    width: calc(30% - 100px);
   }
 }
 @-webkit-keyframes show-bar-five {
@@ -232,7 +249,7 @@ p {
     width: 0;
   }
   100% {
-    width: 60%;
+    width: calc(60% - 100px);
   }
 }
 @-webkit-keyframes show-bar-six {
@@ -240,7 +257,7 @@ p {
     width: 0;
   }
   100% {
-    width: 90%;
+    width: calc(80% - 100px);
   }
 }
 @-webkit-keyframes show-bar-seven {
@@ -248,7 +265,7 @@ p {
     width: 0;
   }
   100% {
-    width: 70%;
+    width: calc(70% - 100px);
   }
 }
 @-webkit-keyframes fade-in-text {
@@ -259,3 +276,9 @@ p {
     opacity: 1;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  #profilepic {
+	  margin-bottom: -50px;
+	}
+  }
