Resolve formatting issues

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -42,6 +42,7 @@ p {
   width: 100%;
   align-items: center;
   justify-content: center;
+	max-width: 1200px;
 }
 @media only screen and (max-width: 1000px) {
   #topprof {
