--- a/CSS/unv.css
+++ b/CSS/unv.css
@@ -27,7 +27,6 @@ a, a:hover {
   height: 145px;
   background: #FFFFFF;
   z-index: 10;
-	
 }
 #navigation .logo {
   position: relative;
@@ -43,7 +42,7 @@ a, a:hover {
 }
 #navigation .links {
   float: right;
-  margin-right: 40px;
+  margin-right: 25px;
   position: relative;
   height: 50px;
   line-height: 50px;
@@ -114,7 +113,7 @@ a, a:hover {
   width: 700px;
 }
 #footer {
-  background-color: #FFFFFF;
+  background-color: transparent;
   width: 100%;
   height: 130px;
   position: relative;
@@ -135,34 +134,29 @@ a, a:hover {
   filter: invert(100%);
   -webkit-filter: invert(100%);
 }
-
-.socialfooter{
-	height: 60px;
-		width: 60px;
+.socialfooter {
+  height: 60px;
+  width: 60px;
 }
-
-p{
-	text-indent: 50px;
+p {
+  text-indent: 50px;
 }
-
-h1,h2,h3,h4{
-	  font-family: atten-new, sans-serif;
+h1, h2, h3, h4 {
+  font-family: atten-new, sans-serif;
   font-weight: Bold;
   font-style: normal;
 }
-
 @media screen and (max-width: 800px) {
   #main1, #main2, #main3 {
     visibility: hidden;
-	  display: none;
-	  width: 1px;
-	}
+    display: none;
+    width: 1px;
   }
-
+}
 @media screen and (min-width: 800px) {
   #main4 {
     visibility: hidden;
-	  display: none;
-	  width: 1px;
-	}
+    display: none;
+    width: 1px;
   }
+}
