--- a/CSS/about.css
+++ b/CSS/about.css
@@ -59,13 +59,19 @@ p {
     display: block;
   }
 }
-#container {
+.container {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   background: linear-gradient(18deg, rgba(166, 43, 80, 1) 0%, rgba(39, 26, 87, 1) 100%);
   color: white;
 }
+
+#contact{
+	padding: 20px;
+	align-content: center;
+}
+
 .button {
   display: block;
   border: 2px solid #fff;
