--- a/CSS/imagedisplay.css
+++ b/CSS/imagedisplay.css
@@ -31,10 +31,10 @@ h1, h3{
 }
 
 #para{
-	width: 50%;
-	min-width: 700px;
-	margin-left: auto;
-	margin-right: auto;
+	  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+	max-width: 1000px;
 	animation: fadeInAnimation ease 3s; 
             animation-iteration-count: 1; 
             animation-fill-mode: forwards; 
@@ -43,6 +43,8 @@ h1, h3{
 #key{
 	margin-left: auto;
 	margin-right: auto;
+	width: 75%;
+	max-width: 300px;
 	display: block;
 	animation: fadeInAnimation ease 3s; 
             animation-iteration-count: 1; 
