Adjusted Body sizing and added LinkedIn button on About page

--- a/CSS/calc.css
+++ b/CSS/calc.css
@@ -118,12 +118,8 @@
 	position: absolute;
 }
 
-h1,h2,h5 {
+h1,h2,h4,h5 {
 	color: black;
-}
-
-h1{
-	
 }
 
 body{
@@ -131,11 +127,11 @@ body{
 }
 
 #description{
-	min-width: 450px;
-	max-width: 750px;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 20px;
+	width: 90%;
+	max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+	padding: 10px;
 }
 
 p{
