--- a/CSS/unv.css
+++ b/CSS/unv.css
@@ -157,3 +157,10 @@ h1, h2, h3, h4 {
     width: 1px;
   }
 }
+
+#article{
+width: 90%;
+	max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+	padding: 10px;}
