--- a/CSS/All-In-One-Mac-Recovery.css
+++ b/CSS/All-In-One-Mac-Recovery.css
@@ -17,9 +17,11 @@
   right: 0;
 }
 #article {
-  width: 75%;
+  width: 90%;
+	max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+	padding: 10px;
 }
 p {
   font-family: atten-new, sans-serif;
@@ -50,4 +52,8 @@ box-shadow: 0px 8px 10px 0px rgba(0,0,0,0.75);
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	width: auto;
+	height: auto;
+	max-width: 90%;
+	max-height: 500px;
 }
