--- a/CSS/about.css
+++ b/CSS/about.css
@@ -12,6 +12,7 @@ p {
 }
 #para {
   width: 50%;
+	max-width: 480px;
 }
 #list {
   width: 50%;
@@ -72,28 +73,44 @@ p {
 	align-content: center;
 }
 
+#buttonbox{
+	width: 100%;
+	height: 80px;
+	display: flex;
+	justify-content: center;
+}
+
 .button {
   display: block;
   border: 2px solid #fff;
   border-radius: 3px;
-  padding: 10px 20px;
   color: #fff;
   text-decoration: none;
   transition: 0.3s;
   font-family: atten-new, sans-serif;
   font-weight: 300;
   font-style: normal;
-  margin-left: auto;
-  margin-right: auto;
-  width: 175px;
+	padding: 10px;
 	text-align: center;
+	margin: 12px;
+	max-width: 195px;
+	height: 30px;
 }
-.button:hover {
+#resumebutton:hover {
   background: #fff;
   color: #000;
   font-family: atten-new, sans-serif;
   font-weight: 300;
   font-style: normal;
+}
+
+#linkedinbutton:hover {
+  background: #0073C2;
+  color: #fff;
+  font-family: atten-new, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+	border: 2px solid #0073C2;
 }
 #container2 {
   width: 100%;
