--- a/CSS/directory.css
+++ b/CSS/directory.css
@@ -10,10 +10,11 @@ font-style: normal;
 }
 
 #list{
-	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
-	
+	  width: 90%;
+	max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+	padding: 5px;
 }
 
 .projects{
