--- a/CSS/imagedisplay.css
+++ b/CSS/imagedisplay.css
@@ -5,13 +5,16 @@
 	background: #333333;
 	width: 100%;
 	height: auto;
-	padding: 20px;
+	padding-bottom: 20px;
+	
 }
 
 #topimage{
-	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
+	width: 90%;
+	max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+	padding: 25px;
 	display: block;
 	animation: fadeInAnimation ease 3s; 
             animation-iteration-count: 1; 
@@ -31,10 +34,11 @@ h1, h3{
 }
 
 #para{
-	  width: 75%;
+width: 90%;
+	max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-	max-width: 1000px;
+	padding: 10px;
 	animation: fadeInAnimation ease 3s; 
             animation-iteration-count: 1; 
             animation-fill-mode: forwards; 
