--- a/CSS/wantable.css
+++ b/CSS/wantable.css
@@ -64,6 +64,13 @@ h1, h3{
 	
 }
 
+#colab{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	width: 400px;
+}
+
 
 @media (max-width: 900px){
 	.container2{
@@ -77,13 +84,13 @@ h1, h3{
 			margin-left: auto;
 	margin-right: auto;
 	}
-	#hiddenpara, #hiddenpara2{
+	#hiddenpara, #hiddenpara2, #hiddenpara5, #hiddenpara6{
 		display: none;
 	}
 }
 
 @media (min-width: 900px){
-	#hiddenpara3, #hiddenpara4{
+	#hiddenpara3, #hiddenpara4, #hiddenpara7, #hiddenpara8{
 		display: none;
 	}
 }
