--- a/Wantable Web Redesign/index.css
+++ b/Wantable Web Redesign/index.css
@@ -11,6 +11,11 @@ body {
 .carousel {
   top: 100px;
 }
+
+a{
+	text-decoration: none;
+}
+
 h1 {
   font-family: reklame-script, sans-serif;
   font-weight: 400;
@@ -33,6 +38,13 @@ h2 {
   left: 50px;
   position: fixed;
 }
+
+#miniLogo{
+	height: 60px;
+  top: 20px;
+  left: 50px;
+  position: fixed;
+}
 #logo2 {
   height: 70px;
   margin-top: auto;
@@ -47,7 +59,7 @@ h2 {
   font-size: 20px;
   margin-top: auto;
   margin-bottom: auto;
-	transform: 
+	text-decoration: none;
 }
 
 #navBox a:hover {
@@ -93,35 +105,35 @@ p {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 500px;
+  margin-top: 475px;
 }
 #carousel_message_slide2 {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 500px;
+  margin-top: 475px;
 }
 #carousel_message_slide3 {
-  width: 700px;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 450px;
+  margin-top: 425px;
 }
 #carousel_message_slide4 {
-  width: 700px;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 470px;
+  margin-top: 445px;
 }
 #carousel_message_slide5 {
-  width: 700px;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 400px;
+  margin-top: 375px;
 	padding-top: 10px;
 }
 .carousel_message {
@@ -143,24 +155,29 @@ p {
   object-fit: cover;
 }
 #slide1 {
-  background-image: url("images/MixMatchReflex_Combined_LP.webp");
+  background-image: url("images/MixMatchReflex_Combined_LP.jpg");
   background-size: cover;
+	background-position: center top; 
 }
 #slide2 {
   background-image: url("images/activewear-stylish-steals.jpg");
   background-size: cover;
+	background-position: center top; 
 }
 #slide3 {
-  background-image: url("images/style_desktop.webp");
+  background-image: url("images/style_desktop.jpg");
   background-size: cover;
+	background-position: center top; 
 }
 #slide4 {
-  background-image: url("images/mens_desktop.webp");
+  background-image: url("images/mens_desktop.jpg");
   background-size: cover;
+	background-position: center top; 
 }
 #slide5 {
   background-image: url("images/FT_20.09.15_BLMSupport_feature.jpg");
   background-size: cover;
+	background-position: center top; 
 }
 .slidebutton {
   font-family: proxima-nova, sans-serif;
@@ -185,6 +202,18 @@ p {
   background-color: #000;
   border-color: #000;
 }
+
+#slidebutton4 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+#slidebutton5 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 .buttonbox {
   width: 520px;
   display: flex;
@@ -195,16 +224,128 @@ p {
 }
 #desc {
   margin-top: 100px;
-  height: 450px;
   padding: 30px;
 }
 #howContain {
   display: flex;
   justify-content: space-between;
-  width: 1000px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 1100px) {
+  #navBox a{
+		display: none;
+	}
+	#navButton{
+		position: absolute;
+		right: 10px;
+		top: 15px;
+	}
+}
+
+@media only screen and (min-width: 1100px) {
+	.dropdown .dropbtn{
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 900px) {
+	#howContain{
+		display: block;
+	}
+	.divider{
+		display: none;
+	}
+	.descBox {
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	
+}
+
+@media only screen and (min-width: 800px) {
+	#miniLogo{
+		display: none;
+	}
+	
+}
+
+@media only screen and (max-width: 800px) {
+	#logo{
+		display: none;
+	}
+	#carousel_message_slide1  {
+		zoom: 0.9;
+	}
+	#carousel_message_slide2  {
+		zoom: 0.9;
+	}
+	#carousel_message_slide3  {
+		zoom: 0.9;
+	}
+	#carousel_message_slide4  {
+		zoom: 0.9;
+	}
+	#carousel_message_slide5  {
+		zoom: 0.9;
+	}
+	
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #222222;
+ height: 50px;
+  border: none;
+	font-family: proxima-nova, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: white;
+  font-size: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  display: inline-block;
+		position: absolute;
+	right: 230px;
+	top: 25px;
+	font-family: proxima-nova, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: white;
+  font-size: 20px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
 .divider {
   background-color: black;
   width: 2px;
@@ -220,12 +361,15 @@ p {
   margin-bottom: 25px
 }
 .descBox p {
-  width: 250px;
   font-family: proxima-nova, sans-serif;
   font-weight: 400;
   font-size: 20px;
   font-style: normal;
   color: black;
+}
+
+.descBox{
+	width: 550px;
 }
 .descBox h3 {
   font-family: proxima-nova, sans-serif;
@@ -288,4 +432,11 @@ ul {
   font-family: proxima-nova, sans-serif;
   font-weight: 300;
   font-style: normal;
+	padding: 0;
+}
+
+ul li a{
+		text-decoration: none;
+	color: white;
+	font-size: 17px;
 }
