--- a/CSS/unv.css
+++ b/CSS/unv.css
@@ -7,7 +7,6 @@ body {
   font-size: 22px;
   font-family: sans-serif;
   height: 100%;
-  margin-top: 145px;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
@@ -19,6 +18,11 @@ a, a:hover {
   font-weight: 400;
   font-style: normal;
 }
+#hiddentop{
+	width: 100%;
+	height: 145px;
+}
+
 #navigation {
   position: fixed;
   left: 0;
@@ -31,14 +35,13 @@ a, a:hover {
 #navigation .logo {
   position: relative;
   height: 50px;
-  line-height: 50px;
   padding: 0 15px;
   font-size: 25px;
   font-weight: 900;
   text-transform: uppercase;
-  top: 47px;
   border-radius: 50px;
   left: 145px;
+	  top: 40%;
 }
 #navigation .links {
   float: right;
@@ -48,10 +51,10 @@ a, a:hover {
   line-height: 50px;
   padding: 0 15px;
   font-size: 25px;
-  font-weight: 900;
   text-transform: uppercase;
-  top: 23px;
   border-radius: 50px;
+	top: 16%
+		
 }
 #navigation .links li {
   float: left;
@@ -104,8 +107,10 @@ a, a:hover {
   position: fixed;
   display: block;
   z-index: 20;
-  top: 5px;
-  left: 10px;
+  top: 15px;
+  left: 15px;
+	width: 120px;
+	height: 120px;
 }
 #welcomebox {
   margin-left: auto;
@@ -156,6 +161,19 @@ h1, h2, h3, h4 {
     display: none;
     width: 1px;
   }
+}
+
+@media screen and (max-width: 480px) {
+  .logo {
+    visibility: hidden;
+  }
+	#logopic{
+		width: 100px;
+		height: 100px;
+	}
+	#navigation{
+		top:-10px;
+	}
 }
 
 #article{
