--- a/Moeller/CSS/home.css
+++ b/Moeller/CSS/home.css
@@ -41,7 +41,7 @@ button:hover {
 }
 #sliderCover {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 #welcomeBanner {
@@ -70,7 +70,7 @@ button:hover {
   width: 500px;
 }
 .slider {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
   opacity: .5
